<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/color3"
    tools:context=".MainActivity2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/front2"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_margin="20dp"
        android:gravity="center"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/radioGroupID">

        <RadioButton
            android:id="@+id/radioButton1ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/secondOption1Text"
            android:textSize="32dp"
            android:textStyle="bold"/>
        <RadioButton
            android:id="@+id/radioButton2ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/secondOption2Text"
            android:textSize="32dp"
            android:textStyle="bold"/>
        <RadioButton
            android:id="@+id/radioButton3ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/secondOption3Text"
            android:textSize="32dp"
            android:textStyle="bold"/>
        <RadioButton
            android:id="@+id/radioButton4ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/secondOption4Text"
            android:textSize="32dp"
            android:textStyle="bold"/>
        <RadioButton
            android:id="@+id/radioButton5ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/secondOption5Text"
            android:textSize="32dp"
            android:textStyle="bold"/>

    </RadioGroup>
    <Button
        android:id="@+id/submitButton4ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submitText"
        android:textSize="32dp"
        android:layout_margin="20dp"
        android:onClick="submitFunction"
        android:textStyle="bold"/>
</LinearLayout>